--- a/eTickets/Views/Cinemas/Index.cshtml
+++ b/eTickets/Views/Cinemas/Index.cshtml
@@ -28,7 +28,7 @@
 
                         <td class="align-middle">
                             <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i> Edit</a> |
-                            <a class="btn btn-outline-info"><i class="bi bi-eye"></i> Details</a> |
+                            <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i> Details</a> |
                             <a class="btn btn-outline-danger @*text-white*@"><i class="bi bi-trash"></i> Delete</a>
                         </td>
                     </tr>
