Added a viewComponent to display number of distinct cart items: ShoppingCartSummery, Default , _layout.

--- a/eTickets/Views/Shared/_Layout.cshtml
+++ b/eTickets/Views/Shared/_Layout.cshtml
@@ -43,6 +43,10 @@
                         </button>
                     </form>
 
+                    <ul class="navbar-nav">
+                        @await Component.InvokeAsync("ShoppingCartSummery")
+                    </ul>
+
                 </div>
             </div>
         </nav>
