--- a/eTickets/Views/Orders/ShoppingCart.cshtml
+++ b/eTickets/Views/Orders/ShoppingCart.cshtml
@@ -65,6 +65,7 @@
 @section Scripts{
     <script src="https://www.paypalobjects.com/api/checkout.js"></script>
     <script>
+        let _total = @Html.Raw(Model.ShoppingCartTotal)
         paypal.Button.render({
             //Configure environment
             env: 'sandbox',
@@ -82,7 +83,14 @@
 
             // Setup a payment
             payment: function(data, actions){
-                console.log("payment set up");
+                return actions.payment.create({
+                    transactions: [{
+                        amount: {
+                            total: _total,
+                            currency: 'USD'
+                        }
+                    }]
+                });
             },
 
             //Execute the payment
